--- a/package.json
+++ b/package.json
@@ -26,21 +26,15 @@
     "vue2-leaflet": "0.0.51"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.2",
-    "babel-brunch": "^6.1.1",    
+    "babel-brunch": "^6.1.1",
     "babel-core": "^6.22.1",
-    "babel-loader": "^7.1.1",
-    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-env": "^1.6.0",
     "brunch": "^2.10.10",
     "cross-env": "^5.0.0",
     "css-loader": "^0.28.0",
     "file-loader": "^0.11.1",
-    "node-sass": "^4.5.0",
-    "sass-brunch": "^2.10.4",
-    "sass-loader": "^5.0.1",
     "uglify-js-brunch": "^2.10.0",
     "vue-brunch": "^2.0.1",
-    "vue-loader": "^12.1.0",
     "vue-template-compiler": "^2.3.3"
   },
   "engines": {
