--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
-    "presets": [
-      [ "es2015" ]
-    ]
-  }
+  "presets": [
+    ["env", { "modules": false }]
+  ],
+  "plugins": ["transform-object-rest-spread"]  
+}
