--- a/package.json
+++ b/package.json
@@ -1,49 +1,33 @@
 {
-  "name": "basemapsterchainsaw",
+  "name": "basemapsterjigsaw",
+  "description": "A Vue.js project",
   "version": "1.0.0",
-  "description": "vue based on Monster Slayer, vue2leaflet, and multiple basemaps Edit",
-  "main": "index.js",
+  "author": "Sebastian Noah Frank <sebastian@alto.photo>",
+  "private": true,
   "scripts": {
-    "dev": "brunch watch --server",
-    "build": "brunch build -p"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --hot",
+    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/altophoto/basemapsterChainsaw.git"
+    "url": "git+https://github.com/altophoto/basemapsterJigsaw"
   },
-  "author": "SNF",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/altophoto/basemapsterChainsaw/issues"
-  },
-  "homepage": "https://github.com/altophoto/basemapsterChainsaw#readme",
   "dependencies": {
-    "axios": "^0.16.2",
-    "leaflet": "^1.2.0",
-    "leaflet.icon.glyph": "^0.2.0",
-    "vue": "^2.3.3",
-    "vue-router": "^2.6.0",
-    "vue2-leaflet": "0.0.51"
+    "bootstrap": "^3.3.7",
+    "vue": "^2.4.2",
+    "vuex": "^2.3.1"
   },
   "devDependencies": {
-    "babel-brunch": "^6.1.1",
-    "babel-core": "^6.22.1",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.0",
-    "brunch": "^2.10.10",
-    "cross-env": "^5.0.0",
-    "css-loader": "^0.28.0",
-    "file-loader": "^0.11.1",
-    "uglify-js-brunch": "^2.10.0",
-    "vue-brunch": "^2.0.1",
-    "vue-template-compiler": "^2.3.3"
-  },
-  "engines": {
-    "node": ">= 4.0.0",
-    "npm": ">= 3.0.0"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "cross-env": "^5.0.5",
+    "css-loader": "^0.28.5",
+    "file-loader": "^0.11.2",
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
+  }
 }
