--- a/package.json
+++ b/package.json
@@ -10,11 +10,18 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/altophoto/basemapsterJigsaw"
+    "url": "git+https://github.com/altophoto/basemapsterJig"
   },
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "connect-history-api-fallback": "^1.3.0",
+    "jquery": "^3.2.1",
+    "leaflet": "^1.2.0",
+    "leaflet.icon.glyph": "^0.2.0",
+    "route360": "^0.4.2",
     "vue": "^2.4.2",
+    "vue-router": "^2.7.0",
+    "vue2-leaflet": "0.0.51",
     "vuex": "^2.3.1"
   },
   "devDependencies": {
